--- a/css/main.css
+++ b/css/main.css
@@ -131,41 +131,53 @@ ul li:nth-child(3) a:before {
 }
 
 ul li:nth-child(4) a:before {
-  background: #3a52bc;
-}
-
-ul li:nth-child(5) a:before {
   background: #da70d6;
 }
 
-ul li:nth-child(6) a:before {
+ul li:nth-child(5) a:before {
   background: #22b44e;
 }
 
-ul li:nth-child(7) a:before {
+ul li:nth-child(6) a:before {
   background: #ec5813;
 }
 
-@media(min-width: 766px) {
-  ul li a:hover .icon {
-    color: #fff;
-    transform: rotateY(360deg);
-  }
 
-  ul li a:hover:before {
-    top: 0;
-  }
+ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
 
-  ul li a:before {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background: #f00;
-    transition: .5s;
-    z-index: 2;
+ul li a:hover:before {
+  top: 0;
+}
+
+ul li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
+}
+
+@media (max-width: 991px) {
+  ul {
+    position: relative;
+    display: block;
+    transform: none;
+    left: 0px;
+    top: 0px;
+  }
+  ul li:nth-child(1) a:before {
+    background: rgb(3, 54, 54);
+  }
+  
+  ul li:nth-child(2) a:before {
+    background: rgb(3, 54, 54);
   }
 }
 
@@ -175,24 +187,7 @@ ul li:nth-child(7) a:before {
     font-size: 30pt !important;
   }
 
-  ul {
-    position: relative;
-    display: block;
-    transform: none;
-    left: 0px;
-    top: 0px;
-  }
-
-  ul li a {
-    width: auto;
-  }
-
   .header2 {
     font-size: 20pt !important;
-  }
-
-  .container-link {
-    padding-top: 1px;
-    padding-bottom: 1px;
   }
 }
