--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,8 @@
   font-weight: 600;
   color: rgb(75, 75, 75);
   text-align: center;
+  margin-bottom: 50pt;
 }
-
 
 .text_ref {
   font-size: 20pt;
@@ -82,11 +82,11 @@
   color: rgb(3, 54, 54);
 }
 
-
 .text_pr {
   font-size: 13pt;
   color: rgb(75, 75, 75);
 }
+
 
 /*Alignment Styles*/
 .alignCenter {
@@ -104,8 +104,8 @@
 
 /*Row Style*/
 .row_pr {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  /*padding-bottom: 100px;*/
 }
 
 /*Progressbar Styles*/
@@ -313,7 +313,7 @@ ul li a:before {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .header1 {
     padding-top: 30px;
     font-size: 30pt !important;
