--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,33 @@
   color: rgb(75, 75, 75);
 }
 
+.text_prWhite {
+  font-size: 13pt;
+  color: rgb(255, 255, 255);
+}
+
 
 /*Alignment Styles*/
 .alignCenter {
   text-align: center;
+}
+
+.container-video {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*Color Styles*/
