--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@
 .header2 {
   font-size: 30pt;
   font-weight: 600;
-  color: rgb(75, 75, 75);
+  color: v;
   text-align: center;
   margin-bottom: 50pt;
 }
@@ -510,20 +510,117 @@ ul li a:before {
     transform: translateY(0);
   }
 }
-.hvr-wobble-vertical {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+.main-timeline:after{
+    content: '';
+    display: block;
+    clear: both;
 }
-.hvr-wobble-vertical:hover, .hvr-wobble-vertical:focus, .hvr-wobble-vertical:active {
-  -webkit-animation-name: hvr-wobble-vertical;
-  animation-name: hvr-wobble-vertical;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
+.main-timeline .timeline{
+    width: calc(50% + 200px);
+    margin: 0 0 25px 5px;
 }
+.main-timeline .timeline-content{
+    color: rgb(75, 75, 75);
+    background: #fff;
+    padding: 15px 15px 15px 290px;
+    border-radius: 20px;
+    display: block;
+    position: relative;
+}
+.main-timeline .timeline-content:hover{ text-decoration: none; }
+.main-timeline .timeline-content:before{
+    content: '';
+    background-color: rgb(3, 54, 54) !important;
+    height: 100%;
+    width: 120px;
+    position: absolute;
+    left: 140px;
+    top: 0;
+    border-radius: 10px !important;
+}
+.main-timeline .timeline-year{
+    color: rgb(3, 54, 54) !important;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 43px;
+    transform: translateY(-50%);
+    position: absolute;
+    left: 22px;
+    top: 50%;
+}
+.main-timeline .timeline-icon{
+    color: #fff;
+    font-size: 50px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 50px;
+    width: 120px;
+    transform: translateY(-50%);
+    position: absolute;
+    left: 140px;
+    top: 50%;
+}
+.main-timeline .title{
+    font-size: 23px;
+    font-weight: 500;
+    text-transform: capitalize;
+    margin: 0 0 7px;
+}
+.main-timeline .description{
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 0;
+}
+
+.main-timeline .timeline:nth-child(even) .timeline-content{ padding: 15px 280px 15px 20px; }
+.main-timeline .timeline:nth-child(even) .timeline-content:before{
+    left: auto;
+    right: 139px;
+}
+.main-timeline .timeline:nth-child(even) .timeline-year{
+    left: auto;
+    right: 19px;
+}
+.main-timeline .timeline:nth-child(even) .timeline-icon{
+    left: auto;
+    right: 139px;
+}
+
+@media screen and (max-width:767px){
+    .main-timeline .timeline,
+    .main-timeline .timeline:nth-child(even){
+        width: 100%;
+        margin: 0 0 30px;
+    }
+    .main-timeline .timeline-content,
+    .main-timeline .timeline:nth-child(even) .timeline-content{
+        text-align: center;
+        padding: 200px 15px 15px 15px;
+    }
+    .main-timeline .timeline-content:before,
+    .main-timeline .timeline:nth-child(even) .timeline-content:before{
+        width: 100%;
+        height: 100px;
+        transform: translateX(-50%) translateY(0);
+        left: 50%;
+        right: auto;
+        top: 80px;
+    }
+    .main-timeline .timeline-year,
+    .main-timeline .timeline:nth-child(even) .timeline-year{
+        transform: translateY(0) translateX(-50%);
+        left: 50%;
+        right: auto;
+        top: 20px;
+    }
+    .main-timeline .timeline-icon,
+    .main-timeline .timeline:nth-child(even) .timeline-icon{
+        width: auto;
+        transform: translateY(0) translateX(-50%);
+        left: 50%;
+        right: auto;
+        top: 105px;
+    }
+  }
