--- a/css/main.css
+++ b/css/main.css
@@ -342,6 +342,10 @@ ul li a:before {
   ul li:nth-child(2) a:before {
     background: rgb(3, 54, 54);
   }
+  
+  ul li:nth-child(3) a:before {
+    background: rgb(3, 54, 54);
+  }
 }
 
 @media (max-width: 991px) {
